# tableflow-project

./: pyproject.toml
tableflow-project/: README.md  main.py  pyproject.toml
tableflow-project/tableflow/: __init__.py
tableflow-project/tableflow/core/: __init__.py  table.py
tableflow-project/tableflow/operations/: __init__.py  aggregate.py  paginate.py  select.py  sort.py
tableflow-project/tests/: test_table.py
tableflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tableflow/core/: table.py
tableflow/operations/: search.py
tableflow/utils/: __init__.py  helpers.py
