[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tableflow"
version = "0.1.0"
description = "A lightweight in-memory table processing library."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

keywords = ["table", "data", "search", "sort", "paginate"]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tableflow*"]